--- a/app/views/main/search_view.erb
+++ b/app/views/main/search_view.erb
@@ -171,7 +171,7 @@
     <div class="row">
     
     <div class="row recomend_view">
-    <h2> 추천 프로그램 </h2> 
+    <div class="recomend_say col-ls-3"><h3 ><span style="color:#ffffff;background-color:#5fef8f">  &nbsp;&nbsp;&nbsp;고민할 필요없이 추천해 줄께요&nbsp;&nbsp;&nbsp;   </span></h3></div>
     <br>
       <% 
         number =1
