--- a/app/views/layouts/Main.html.erb
+++ b/app/views/layouts/Main.html.erb
@@ -24,9 +24,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
-<link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap.tagsinput/0.4.2/bootstrap-tagsinput.css" />
-<script src="//cdn.jsdelivr.net/bootstrap.tagsinput/0.4.2/bootstrap-tagsinput.min.js"></script><!--요건
-내가 뭐 가져다 쓸라고 해놓은 라이브러리 같은거라 신경끄고-->
+
+
   
   <!-- 여기 바로 밑 stylesheet_link_tag는 asset에 있는 파일을 pre compile함 import한다는 개념으로 보면됨-->
   <%= stylesheet_link_tag    'main_css', media: 'all', 'data-turbolinks-track' => true %>
@@ -34,6 +33,10 @@
  
   <!-- 여기 바로 밑 javasciprt_inculde_tag는 javascript를 위해 임포터 하는 파일이라고 생각하면됨-->
   <%= javascript_include_tag    'main_js', media: 'all', 'data-turbolinks-track' => true %>
+  
+  <!--구글 폰트 =>recomend_say-->
+  
+  
   <%= csrf_meta_tags %>
   
 
