--- a/app/assets/stylesheets/dashboardcss/dashboard.css
+++ b/app/assets/stylesheets/dashboardcss/dashboard.css
@@ -161,7 +161,8 @@ body {font-family: Verdana, sans-serif;}
 
 .backgroud_upper_intro{
     padding-top: 20px; padding-bottom: 0px; text-align: center;
-    background : url("/OGA1EQ0.jpg");
+    background : url("/470.jpg");
     background-size: cover;
     background-position : center center;
 }
+
