--- a/app/assets/stylesheets/maincss/search_box.css
+++ b/app/assets/stylesheets/maincss/search_box.css
@@ -123,7 +123,7 @@
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         border-radius: 1px;
-        color:#FFF;
+        color:#D3E9F5;
 }
 
 .normal_btn:focus{
@@ -131,15 +131,15 @@
         background: none;
         /** belows styles are working good */
         padding: 2px 5px;
-        margin-top: 2px;
+        margin-top: 10px;
         position: relative;
         left: -28px;
         /* IE7-8 doesn't have border-radius, so don't indent the padding */
         margin-bottom: 0;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
-        border-radius: 3px;
-        color:#819FF7;
+        border-radius: 1px;
+        color:#D3E9F5;
 }
 
 .tag_position{
@@ -172,6 +172,7 @@
     border-bottom-width: 3px;
 }
 
-.recomend_say{
+.recomend_view{
     text-align: center;
+    font-family: 'Hanna', serif;
 }
