--- a/app/views/layouts/dashboard_head.erb
+++ b/app/views/layouts/dashboard_head.erb
@@ -8,30 +8,25 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>Dashboard Template for Bootstrap</title>
+ <script
+  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   
+
+
+<!-- jquery도 결국 화면을 웹 꾸미는 UI 프레임워크라서 가져다 쓰는 거고 요 밑에 js보이지 -->
+<!-- bootstrap도 유동적인 화면의 UI를 꾸미기 위해서 jquery를 가져다 사용하는데 밑에것이 위에것보다
+     먼저 들어오면 bootstrap이 작동하지 않음-->
+
   <!--jquery, javascript 인버팅-->
   <%= stylesheet_link_tag    'dashboard_css', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'dashboard_js', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-         
-          <!-- 버튼을 사용하고 싶어요ㅠ-->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script>
-     $(document).ready(function() {
-	$('#myButton2').on('click', function () {
-	  var $btn = $(this).button('complete');
-	  setTimeout(function () {
-	    $btn.button('reset');
-	  }, 2000);
-	});
-     });
-</script>
+
   
   
   </head>
